[gd_scene load_steps=46 format=2]

[ext_resource path="res://entities/player/powerStates/scover/playerScover.gd" type="Script" id=1]
[ext_resource path="res://entities/player/powerStates/scover/scripts/IDLE.gd" type="Script" id=2]
[ext_resource path="res://entities/player/playerBase.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/classes/statemachinee/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://entities/player/powerStates/scover/sprites/lodrofo/scoveyFall.png" type="Texture" id=5]
[ext_resource path="res://entities/player/powerStates/scover/scripts/WALK.gd" type="Script" id=6]
[ext_resource path="res://entities/player/powerStates/scover/scripts/JUMP.gd" type="Script" id=7]
[ext_resource path="res://entities/player/powerStates/scover/scripts/DRIVE.gd" type="Script" id=8]
[ext_resource path="res://entities/player/powerStates/scover/scripts/FALL.gd" type="Script" id=9]
[ext_resource path="res://entities/player/powerStates/scover/scripts/DIGGING.gd" type="Script" id=10]

[sub_resource type="AnimationNodeStateMachinePlayback" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 32 )

[sub_resource type="CircleShape2D" id=4]
radius = 20.0

[sub_resource type="RayShape2D" id=20]
length = 16.0

[sub_resource type="CircleShape2D" id=36]
radius = 20.0

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "DRIVE"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "FALL"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "IDLE"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "JUMP"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "WALK"

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachine" id=7]
states/DRIVE/node = SubResource( 12 )
states/DRIVE/position = Vector2( 613.667, 84.3333 )
states/FALL/node = SubResource( 22 )
states/FALL/position = Vector2( 213.222, 192.333 )
states/IDLE/node = SubResource( 6 )
states/IDLE/position = Vector2( 468.333, 75 )
states/JUMP/node = SubResource( 23 )
states/JUMP/position = Vector2( 205.667, 69.2222 )
states/WALK/node = SubResource( 13 )
states/WALK/position = Vector2( 452.334, 191 )
transitions = [ "IDLE", "DRIVE", SubResource( 14 ), "IDLE", "WALK", SubResource( 15 ), "WALK", "DRIVE", SubResource( 16 ), "DRIVE", "WALK", SubResource( 17 ), "WALK", "IDLE", SubResource( 18 ), "DRIVE", "IDLE", SubResource( 19 ), "FALL", "IDLE", SubResource( 24 ), "IDLE", "JUMP", SubResource( 25 ), "JUMP", "IDLE", SubResource( 26 ), "JUMP", "FALL", SubResource( 27 ), "FALL", "WALK", SubResource( 29 ), "FALL", "DRIVE", SubResource( 30 ), "WALK", "JUMP", SubResource( 31 ), "WALK", "FALL", SubResource( 32 ), "DRIVE", "FALL", SubResource( 33 ), "IDLE", "FALL", SubResource( 34 ), "JUMP", "WALK", SubResource( 35 ) ]
start_node = "IDLE"

[sub_resource type="AnimationNodeStateMachinePlayback" id=8]

[sub_resource type="Animation" id=9]
resource_name = "DRIVE"
length = 0.2
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "res://entities/player/powerStates/scover/sprites/%s/scoveyDrive.png", NodePath("sprite/sprite") ],
"method": "getSprite"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite/sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=28]
resource_name = "FALL"
length = 0.2
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "res://entities/player/powerStates/scover/sprites/%s/scoveyFall.png", NodePath("sprite/sprite") ],
"method": "getSprite"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite/sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=5]
resource_name = "IDLE"
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "res://entities/player/powerStates/scover/sprites/%s/scoveyIdle.png", NodePath("sprite/sprite") ],
"method": "getSprite"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite/sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=21]
resource_name = "JUMP"
length = 0.3
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "res://entities/player/powerStates/scover/sprites/%s/scoveyJump.png", NodePath("sprite/sprite") ],
"method": "getSprite"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite/sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite/sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "WALK"
length = 0.45
loop = true
step = 0.075
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "res://entities/player/powerStates/scover/sprites/%s/scoveyWalk.png", NodePath("sprite/sprite") ],
"method": "getSprite"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite/sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="playerScover" instance=ExtResource( 3 )]
script = ExtResource( 1 )
stateMachinePath = NodePath("StateMachine")
GRAVITY = 40
MAXSPEED = 320
MAXFALL = 1000
JUMPFORCE = -900
spriteGizmoPath = NodePath("sprite")

[node name="AnimationTree" parent="shieldSystem" index="0"]
parameters/playback = SubResource( 2 )

[node name="StateMachine" type="Node" parent="." index="21"]
script = ExtResource( 4 )
startingState = NodePath("IDLE")

[node name="IDLE" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 2 )

[node name="WALK" type="Node" parent="StateMachine" index="1"]
script = ExtResource( 6 )

[node name="JUMP" type="Node" parent="StateMachine" index="2"]
script = ExtResource( 7 )

[node name="FALL" type="Node" parent="StateMachine" index="3"]
script = ExtResource( 9 )

[node name="DRIVE" type="Node" parent="StateMachine" index="4"]
script = ExtResource( 8 )

[node name="driveTimer" type="Timer" parent="StateMachine/DRIVE" index="0"]
wait_time = 0.4
one_shot = true

[node name="DIGGING" type="Node" parent="StateMachine" index="5"]
script = ExtResource( 10 )

[node name="sprite" type="Node2D" parent="." index="22"]

[node name="sprite" type="Sprite" parent="sprite" index="0"]
position = Vector2( 0, -8 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="inside" type="Area2D" parent="sprite" index="1"]
position = Vector2( 0, -8 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="sprite/inside" index="0"]
position = Vector2( 0, 8 )
shape = SubResource( 3 )

[node name="collide" type="RayCast2D" parent="sprite" index="2"]
enabled = true
cast_to = Vector2( 0, 32 )

[node name="cicle" type="CollisionShape2D" parent="." index="23"]
position = Vector2( 0, -32 )
shape = SubResource( 4 )

[node name="raycast" type="CollisionShape2D" parent="." index="24"]
position = Vector2( 0, -16 )
shape = SubResource( 20 )

[node name="raycastDirectional" type="CollisionShape2D" parent="." index="25"]
shape = SubResource( 36 )
disabled = true

[node name="AnimationTree" type="AnimationTree" parent="." index="26"]
tree_root = SubResource( 7 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="27"]
anims/DRIVE = SubResource( 9 )
anims/FALL = SubResource( 28 )
anims/IDLE = SubResource( 5 )
anims/JUMP = SubResource( 21 )
anims/RESET = SubResource( 10 )
anims/WALK = SubResource( 11 )

[connection signal="area_entered" from="sprite/inside" to="." method="_on_inside_area_entered"]
[connection signal="area_exited" from="sprite/inside" to="." method="_on_inside_area_exited"]
