[gd_scene load_steps=10 format=2]

[ext_resource path="res://entities/player/powerStates/scover/playerScover.gd" type="Script" id=1]
[ext_resource path="res://entities/classes/statemachinee/state.gd" type="Script" id=2]
[ext_resource path="res://entities/player/playerBase.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/classes/statemachinee/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://entities/player/powerStates/scover/sprites/lodrofo/scoveyDrive.png" type="Texture" id=5]

[sub_resource type="AnimationNodeStateMachinePlayback" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 28 )

[sub_resource type="CircleShape2D" id=4]
radius = 16.0

[node name="playerBase" instance=ExtResource( 3 )]
script = ExtResource( 1 )

[node name="AnimationTree" parent="shieldSystem" index="0"]
parameters/playback = SubResource( 2 )

[node name="StateMachine" type="Node" parent="." index="21"]
script = ExtResource( 4 )
startingState = NodePath("IDLE")

[node name="IDLE" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 2 )

[node name="sprite" type="Node2D" parent="." index="22"]

[node name="destroy" type="Area2D" parent="sprite" index="0"]
position = Vector2( 0, 16 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="sprite/destroy" index="0"]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="sprite" index="1"]
position = Vector2( 0, -8 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
hframes = 2

[node name="inside" type="Area2D" parent="sprite" index="2"]
position = Vector2( 0, -8 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="sprite/inside" index="0"]
position = Vector2( 0, 12 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="23"]
position = Vector2( 0, -32 )
shape = SubResource( 4 )

[connection signal="body_entered" from="sprite/destroy" to="." method="_on_destroy_body_entered"]
[connection signal="body_entered" from="sprite/inside" to="." method="_on_inside_body_entered"]
[connection signal="body_exited" from="sprite/inside" to="." method="_on_inside_body_exited"]
